--- a/views/partials/questioncard.ejs
+++ b/views/partials/questioncard.ejs
@@ -1,12 +1,11 @@
 <li id="question<%= data.questionOrder %>" class="col-lg-10 offset-lg-0 text-center d-flex flex-column py-5 " data-quiz-id="<%= data.quizId %>" data-id="<%= data.id %>"
-  data-question-order="<%= data.questionOrder %>" data-spy="scroll" data-bs-target="#mySidebar"
-   id="question<%= data.questionOrder %>">
+  data-question-order="<%= data.questionOrder %>" data-spy="scroll" data-bs-target="#mySidebar">
    <input id="question<%= data.questionOrder %>text" data-tag="text" class="qtext border rounded border-success shadow-sm form-control-lg d-lg-flex required"
      type="text" placeholder="Start typing your question" maxlength="120" style="margin-left: 40px;" value="<%= data.text %>">
    <ul class="row qinfo" style="margin-top: 25px" type="none">
      <div class="col-2 col-lg-2 ">
        <label for="Time Limit" class="selectlabel " id="tlimit">Time Limit</label>
-       <select id="timeLimitId<%= data.questionOrder %> " class="form-select border-success" data-tag="timeLimitId">
+       <select id="timeLimitId<%= data.questionOrder %>" class="form-select border-success" data-tag="timeLimitId">
          <option value="1" <%= data.timeLimitId == 1 ? "selected" : "" %> id="10s">10 seconds</option>
          <option value="2" <%= data.timeLimitId == 2 ? "selected" : "" %> id="20s">20 seconds</option>
          <option value="3" <%= data.timeLimitId == 3 ? "selected" : "" %> id="30s">30 seconds</option>
@@ -157,13 +156,13 @@
   
    <div class="btngroup ">
  
-     <button class=" btn btn-success" type="button" style="margin-top: 10px;" data-tag="clone"> <span
+     <button class="btn btn-success" type="button" style="margin-top: 10px;" data-tag="clone"> <span
          style="font-weight:bold">Clone Question</span></button>
  
-     <button class=" btn btn-primary" type="button" style="margin-top: 10px;" data-tag="addquestion"> <span
+     <button class="btn btn-primary" type="button" style="margin-top: 10px;" data-tag="addquestion"> <span
          style="font-weight:bold">Add Question </span></button>
  
-     <button class=" btn btn-danger" type="button" style="margin-top: 10px; width: 200px;" data-tag="delete">
+     <button class="btn btn-danger" type="button" style="margin-top: 10px; width: 200px;" data-tag="delete">
        <span style="font-weight:bold;">Delete</span> </button>
  
    </div>
