--- a/views/partials/quizcard.ejs
+++ b/views/partials/quizcard.ejs
@@ -47,7 +47,8 @@
           <small class="text-muted"> <%= moment.utc(data.updatedAt, 'YYYY-MM-DD HH:mm:ss SS').fromNow() %></small>
           <% if (!data.editEnabled) { %>
             <a name="" id=""  class="btn btn-sm btn-info ms-2 px-3" href="/clone/<%= data.id %>"  role="button">CLONE</a>
-          <% } else { %> <a name="" id=""  class="btn btn-sm btn-primary ms-2 px-3" href="/edit/<%= data.id %>"  role="button">EDIT</a> <% }  %>  
+          <% } else { %> <a name="" id=""  class="btn btn-sm btn-danger ms-2 px-3" href="/delete/<%= data.id %>"  role="button">DELETE</a>
+            <a name="" id=""  class="btn btn-sm btn-primary ms-2 px-3" href="/edit/<%= data.id %>"  role="button">EDIT</a> <% }  %>  
           <% if (data.isDraft) { %>
           <a name="" id="" class="btn btn-sm btn-success ms-2 px-3 disabled" href="/lobby/<%= data.id %> " role="button">PLAY</a>
           <% } else { %>
