add delete modal

--- a/public/stylesheets/stylehome.css
+++ b/public/stylesheets/stylehome.css
@@ -50,6 +50,10 @@ h2 {
   color: white;
 }
 */
+.hidden-modal{
+  display: none;
+}
+
 #question-field {
   border-style: groove;
   border-width: 1px;
