--- a/views/partials/quizcard.ejs
+++ b/views/partials/quizcard.ejs
@@ -23,6 +23,7 @@
 }
 </style>
 
+
 <div class="card mt-1" style="max-width: 725px">
   <div class="row g-0">
     <div class="col-md-3 col-3 img-wrapper">
@@ -46,13 +47,13 @@
         <div class="d-flex align-items-center justify-content-between px-0" role="group" aria-label="">
           <small class="text-muted"> <%= moment.utc(data.updatedAt, 'YYYY-MM-DD HH:mm:ss SS').fromNow() %></small>
           <% if (!data.editEnabled) { %>
-            <a name="" id=""  class="btn btn-sm btn-info ms-2 px-3" href="/clone/<%= data.id %>"  role="button">CLONE</a>
-          <% } else { %> <a name="" id=""  class="btn btn-sm btn-danger ms-2 px-3" href="/delete/<%= data.id %>"  role="button">DELETE</a>
-            <a name="" id=""  class="btn btn-sm btn-primary ms-2 px-3" href="/edit/<%= data.id %>"  role="button">EDIT</a> <% }  %>  
+            <a id=""  class="btn btn-sm btn-info ms-2 px-3" href="/clone/<%= data.id %>"  role="button">CLONE</a>
+          <% } else { %> <a id="" class="btn btn-sm btn-danger ms-2 px-3" href="/delete/<%= data.id %>"  role="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">DELETE</a>
+            <a  id=""  class="btn btn-sm btn-primary ms-2 px-3" href="/edit/<%= data.id %>"  role="button">EDIT</a> <% }  %>  
           <% if (data.isDraft) { %>
-          <a name="" id="" class="btn btn-sm btn-success ms-2 px-3 disabled" href="/lobby/<%= data.id %> " role="button">PLAY</a>
+          <a  id="" class="btn btn-sm btn-success ms-2 px-3 disabled" href="/lobby/<%= data.id %> " role="button">PLAY</a>
           <% } else { %>
-            <a name="" id="" class="btn btn-sm btn-success ms-2 px-3" href="/lobby/<%= data.id %> " role="button">PLAY</a>
+            <a id="" class="btn btn-sm btn-success ms-2 px-3" href="/lobby/<%= data.id %> " role="button">PLAY</a>
           <% }  %>  
         </div>
       </div>
