--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
   <%- include('../partials/headerhome', {title}); %>
   <body>
     <h1><%= title %></h1>
@@ -61,6 +61,27 @@
         <% }); %>
       </div>
     </div>
+
+    <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Delete Quiz?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure to delete the Quiz?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+        <a href="#" type="button" class="btn btn-danger btn-sm">Confirm</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
     <%- include('../partials/footer') %>
     <!--     <script>
       console.log('from :>> ', '🏡');
